src/objects/UL_UserCustomerProduct__c.object
<CustomObject>
    <fields>
        <fullName>AccessType__c</fullName>
        <description>Defines user access type - Read/Write</description>
        <label>AccessType</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Defines customer</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Customer Product Categorysies</relationshipLabel>
        <relationshipName>User_Customer_Product_Categorysies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>User Customer Product Categorysies</relationshipLabel>
        <relationshipName>User_Customer_Product_Categorysies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Customer_Product_Categorysies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Customer Product Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Customer Product Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Customer Product Categorysies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>